11.0.1
------
* Increase number of SPACECRAFT rows supported from 200 to 1000