@@ -90,6 +90,8 @@
       Character*28 Bufout
       Real*8 Delay6(10), Atmdry6(10), Atmwet6(10), Ubase6(10),          &
      &       Vbase6(10), Wbase6(10), Acoef(10), delta, El6(10), Az6(10)
+      Real*8 StaX6(10), StaY6(10), StaZ6(10)
+
       Real*8 JDY2K
       Real*8 Delcoef(40      ,10), Atmdrycoef(40      ,10),             &
      &       Atmwetcoef(40      ,10), Ubasecoef(40      ,10),           &
@@ -168,6 +170,9 @@
            Wbase6(K)  = Wbase_f(K,1,J,ISRC)
            El6(K)     = El_f(1,K,1,J,ISRC)
            Az6(K)     = Az_f(1,K,1,J,ISRC)
+           StaX6(K)   = StaX_f(1,K,1,J,ISRC)
+           StaY6(K)   = StaY_f(1,K,1,J,ISRC)
+           StaZ6(K)   = StaZ_f(1,K,1,J,ISRC)
           Enddo
 !
 !    Send to C routine fitPoly to compute polynomial coefficients
@@ -231,6 +236,24 @@
       Do L = 1, N
        Wbasecoef(J,L) = Acoef(L)
       Enddo
+!
+      ierr = fitPoly(Acoef, StaX6, %VAL(n), %VAL(m), %VAL(delta))
+      if (DoStnPos .eq. 1)                                              &
+        ierr = difxiowritepoly26(fd_out, "SRC %d ANT %d STA X (m):",    &
+           ISRC-1, J-1, Acoef(1), Acoef(2), Acoef(3), Acoef(4),        &
+           Acoef(5), Acoef(6))
+!
+      ierr = fitPoly(Acoef, StaY6, %VAL(n), %VAL(m), %VAL(delta))
+      if (DoStnPos .eq. 1)                                              &
+        ierr = difxiowritepoly26(fd_out, "SRC %d ANT %d STA Y (m):",    &
+           ISRC-1, J-1, Acoef(1), Acoef(2), Acoef(3), Acoef(4),        &
+           Acoef(5), Acoef(6))
+!
+      ierr = fitPoly(Acoef, StaZ6, %VAL(n), %VAL(m), %VAL(delta))
+      if (DoStnPos .eq. 1)                                              &
+        ierr = difxiowritepoly26(fd_out, "SRC %d ANT %d STA Z (m):",    &
+           ISRC-1, J-1, Acoef(1), Acoef(2), Acoef(3), Acoef(4),        &
+           Acoef(5), Acoef(6))
 !
       Enddo       ! Station loop
       Enddo    ! Source loop
